# web-ssl-vpn

./: .gitignore  Cargo.toml  README.md  build.zig  demo_acl.sh  flake.nix  goal.md  issues.md  mock_http.rs  mock_servers.py  opencode_session.txt  test.zig
certs/: ca.crt  server.crt
desktop/: Cargo.toml
desktop/src/: main.rs  styles
ebpf/: Cargo.toml
ebpf/.cargo/: config.toml
ebpf/src/: lib.rs
samples/slides/: index.html
server/: Cargo.toml  build.rs
server/html/: dashboard.html  login.html
server/src/: config.rs  db.rs  ebpf.rs  main.rs  ratelimit.rs  status.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: main.rs
web/src/styles/: button.rs  container.rs  mod.rs  scrollbar.rs  text.rs
web/src/styles/types/: custom_palette.rs  mod.rs  palette.rs  palette_extension.rs  style_type.rs
