[workspace]
resolver = "2"
members = ["server", "web", "ebpf", "desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Web SSL VPN Team"]
license = "MIT"

[workspace.dependencies]
pingora = { version = "0.8", features = ["openssl"] }
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"
pingora-error = "0.8"
bytes = "1"
http = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "=2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
iced = { version = "0.14", features = ["webgl", "fira-sans", "tiny-skia"] }
aya = { version = "0.13", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rust-argon2 = "3.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1