[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14", features = [
    "fira-sans", "tiny-skia", "image",
    "debug", "advanced", "canvas", "tokio",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
# symlink styles from web
