[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14", default-features = false, features = [
    "webgl", "fira-sans", "tiny-skia",
    "debug", "advanced", "canvas",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unused_must_use = "deny"

[[bin]]
name = "web"
path = "src/main.rs"
