[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14", default-features = false, features = [
    "webgl", "fira-sans", "tiny-skia", "image",
    "debug", "advanced", "canvas",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["json"] }
gloo-console = "0.3"
base64 = "0.22"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints.rust]
unused_must_use = "deny"

[[bin]]
name = "web"
path = "src/main.rs"
